--- a/3725520208_HW1_CSCI544.ipynb
+++ b/3725520208_HW1_CSCI544.ipynb
@@ -73,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_12645/1150709939.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_7666/1150709939.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  full_data = pd.read_csv(\"./amazon_reviews_us_Office_Products_v1_00.tsv\", delimiter='\\t', encoding='utf-8', error_bad_lines=False)\n",
@@ -199,7 +199,7 @@
       "\n",
       "Skipping line 1892134: expected 15 fields, saw 22\n",
       "\n",
-      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_12645/1150709939.py:2: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_7666/1150709939.py:2: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  full_data = pd.read_csv(\"./amazon_reviews_us_Office_Products_v1_00.tsv\", delimiter='\\t', encoding='utf-8', error_bad_lines=False)\n"
      ]
     }
@@ -310,21 +310,21 @@
      "text": [
       "=========================Sample Reviews:===========================\n",
       "                                               review_body  star_rating  \\\n",
-      "825367   I feel like such a pro with this presenter! Pr...          5.0   \n",
-      "345381                                      Great purchase          5.0   \n",
-      "2450776  I purchased the Canon MP620 to replace an Epso...          4.0   \n",
+      "1654629  Wow!  I love my ScanSnap iX500 as much as my i...          5.0   \n",
+      "1066478                                  It pads my mouse.          5.0   \n",
+      "1323683  Seems that some of the cartridges don't work. ...          3.0   \n",
       "\n",
-      "                     review_headline  \n",
-      "825367              Great presenter!  \n",
-      "345381                    Five Stars  \n",
-      "2450776  Excellent buy for the money  \n"
+      "                             review_headline  \n",
+      "1654629  Mac fan-addict loves ScanSnap iX500  \n",
+      "1066478                      This mouse pad.  \n",
+      "1323683                              It's Ok  \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_12645/297036716.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_7666/297036716.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -347,35 +347,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "========================Ratings Statistics:============================\n",
-      "Ratings Count:\n",
-      "1.0     306979\n",
-      "2.0     138384\n",
-      "3.0     193691\n",
-      "4.0     418371\n",
-      "5.0    1582812\n",
-      "Name: star_rating, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Reporting statistics of the ratings\n",
-    "ratings_statistics = data['star_rating'].value_counts().sort_index()\n",
-    "print(\"\\n========================Ratings Statistics:============================\")\n",
-    "print(\"Ratings Count:\")\n",
-    "print(ratings_statistics)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,14 +355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_12645/18226587.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_7666/18226587.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -449,6 +420,32 @@
     "\n",
     "# Printing the reviews that have been selected for further processing randomly\n",
     "print(selected_reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "========================Ratings Statistics:============================\n",
+      "Ratings Count:\n",
+      "0.0    100000\n",
+      "1.0    100000\n",
+      "Name: sentiment, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reporting statistics of the ratings\n",
+    "ratings_statistics = selected_reviews['sentiment'].value_counts().sort_index()\n",
+    "print(\"\\n========================Ratings Statistics:============================\")\n",
+    "print(\"Ratings Count:\")\n",
+    "print(ratings_statistics)"
    ]
   },
   {
@@ -605,9 +602,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_12645/2837347252.py:75: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_7666/3895173410.py:75: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  reviews = reviews.apply(lambda x: BeautifulSoup(x, 'html.parser').get_text())\n",
-      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_12645/2837347252.py:75: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
+      "/var/folders/xx/d1tzxzhj3fzbmswz4z7m_40w0000gn/T/ipykernel_7666/3895173410.py:75: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
       "  reviews = reviews.apply(lambda x: BeautifulSoup(x, 'html.parser').get_text())\n"
      ]
     },
@@ -618,7 +615,7 @@
       "===================Printing the Average lenght of Reviews Before and After Cleaning====================\n",
       "\n",
       "Average Length of Reviews (Before Cleaning): 318 characters\n",
-      "Average Length of Reviews (After Cleaning): 300 characters\n"
+      "Average Length of Reviews (After Cleaning): 302 characters\n"
      ]
     }
    ],
@@ -700,8 +697,8 @@
     "    reviews = reviews.apply(lambda x: BeautifulSoup(x, 'html.parser').get_text())\n",
     "    reviews = reviews.apply(lambda x: re.sub(r'http\\S+', '', x))\n",
     "\n",
-    "    # Remove non-alphabetical characters\n",
-    "    reviews = reviews.apply(lambda x: re.sub(r'[^a-zA-Z\\s]', '', x))\n",
+    "    # Remove non-alphabetical characters (excluding single quote)\n",
+    "    reviews = reviews.apply(lambda x: re.sub(r'[^a-zA-Z\\s\\']', '', x))\n",
     "\n",
     "    # Remove extra spaces\n",
     "    reviews = reviews.apply(lambda x: re.sub(' +', ' ', x))\n",
@@ -744,27 +741,28 @@
      "text": [
       "============ Printing Sample Reviews Before and After Pre-processing =============\n",
       "\n",
-      "Sample Review 591443 Before Pre-processing:\n",
-      "printer did not work at all as the carriage was stuck in the far right position\n",
+      "Sample Review 2179717 Before Pre-processing:\n",
+      "it works of the time and then only for few seconds and it turns off imagine that in the middle of your presentation better invest in a name brand product\n",
       "\n",
-      "Sample Review 591443 After NLTK Pre-processing:\n",
-      "printer work carriage stuck far right position\n",
+      "Sample Review 2179717 After NLTK Pre-processing:\n",
+      "work time second turn imagine middle presentation better invest name brand product\n",
       "\n",
-      "Sample Review 1498236 Before Pre-processing:\n",
-      "product was as advertised and is a great teaching tool tool set provides large visuals for students and offers a varity\n",
+      "Sample Review 1647528 Before Pre-processing:\n",
+      "phone does not work or chargelike to return it for my get a full refund on this product thank you very much\n",
       "\n",
-      "Sample Review 1498236 After NLTK Pre-processing:\n",
-      "product advertised great teaching tool tool set provides large visuals student offer varity\n",
+      "Sample Review 1647528 After NLTK Pre-processing:\n",
+      "phone work chargelike return get full refund product thank much\n",
       "\n",
-      "Sample Review 2161966 Before Pre-processing:\n",
-      "ive had this for about a year i had my nd staples mailmate die on me in years with pretty light home usei bought this amazon basics but have been disappointed with performance its underpowered jams often gets stuck runningtoo bad ive liked all the other amazon basics products ive purchased\n",
+      "Sample Review 1572559 Before Pre-processing:\n",
+      "this perfectly works in the container store label maker and costs a lot less my label maker model is pt\n",
       "\n",
-      "Sample Review 2161966 After NLTK Pre-processing:\n",
-      "ive year nd staple mailmate die year pretty light home usei bought amazon basic disappointed performance underpowered jam often get stuck runningtoo bad ive liked amazon basic product ive purchased\n",
+      "Sample Review 1572559 After NLTK Pre-processing:\n",
+      "perfectly work container store label maker cost lot le label maker model pt\n",
+      "\n",
       "=================Printing the Average lenght of Reviews Before and After Pre-processing==================\n",
       "\n",
-      "Average Length of Reviews (Before NLTK Processing): 300 characters\n",
-      "Average Length of Reviews (After NLTK Processing): 190 characters\n"
+      "Average Length of Reviews (Before NLTK Processing): 302 characters\n",
+      "Average Length of Reviews (After NLTK Processing): 187 characters\n"
      ]
     }
    ],
@@ -821,8 +819,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Shape of X_train_tfidf: (160000, 108488)\n",
-      "Shape of X_test_tfidf: (40000, 108488)\n"
+      "Shape of X_train_tfidf: (160000, 106898)\n",
+      "Shape of X_test_tfidf: (40000, 106898)\n"
      ]
     }
    ],
@@ -859,16 +857,16 @@
      "text": [
       "\n",
       "================== Training Set Metrics: (Perceptron) ===================\n",
-      "Accuracy: 0.91620625\n",
-      "Precision: 0.9258094215129661\n",
-      "Recall: 0.9049458172409914\n",
-      "F1-score: 0.9152587367502892\n",
+      "Accuracy: 0.91079375\n",
+      "Precision: 0.9336473506438674\n",
+      "Recall: 0.8844601097403977\n",
+      "F1-score: 0.9083883721975109\n",
       "\n",
       "================== Testing Set Metrics: (Perceptron) ====================\n",
-      "Accuracy: 0.83635\n",
-      "Precision: 0.8197555523850287\n",
-      "Recall: 0.8621517531135897\n",
-      "F1-score: 0.8404193076548025\n"
+      "Accuracy: 0.825175\n",
+      "Precision: 0.8139186709166425\n",
+      "Recall: 0.8429450307607663\n",
+      "F1-score: 0.8281775965011426\n"
      ]
     }
    ],
@@ -929,16 +927,16 @@
      "text": [
       "\n",
       "================== Training Set Metrics: (SVM) ====================\n",
-      "Accuracy: 0.97399375\n",
-      "Precision: 0.974595149300428\n",
-      "Recall: 0.9733648305773245\n",
-      "F1-score: 0.9739796014082657\n",
+      "Accuracy: 0.97296875\n",
+      "Precision: 0.9731544463339001\n",
+      "Recall: 0.9727773819790768\n",
+      "F1-score: 0.9729658776244976\n",
       "\n",
       "================== Testing Set Metrics: (SVM) ====================\n",
-      "Accuracy: 0.903925\n",
-      "Precision: 0.8963773807186334\n",
-      "Recall: 0.9133696793877857\n",
-      "F1-score: 0.90479375696767\n"
+      "Accuracy: 0.903425\n",
+      "Precision: 0.9019637161084529\n",
+      "Recall: 0.9051668083829341\n",
+      "F1-score: 0.9035624235464463\n"
      ]
     }
    ],
@@ -1013,16 +1011,16 @@
      "text": [
       "\n",
       "================== Training Set Metrics: (Logistic Regression) ====================\n",
-      "Accuracy: 0.9125625\n",
-      "Precision: 0.9156665953079548\n",
-      "Recall: 0.9088454760208482\n",
-      "F1-score: 0.912243284949002\n",
+      "Accuracy: 0.91113125\n",
+      "Precision: 0.9141152180481418\n",
+      "Recall: 0.9075455897608959\n",
+      "F1-score: 0.9108185575674709\n",
       "\n",
       "================== Testing Set Metrics: (Logistic Regression) ====================\n",
-      "Accuracy: 0.8929\n",
-      "Precision: 0.887627695800227\n",
-      "Recall: 0.899614865202821\n",
-      "F1-score: 0.893581081081081\n"
+      "Accuracy: 0.8937\n",
+      "Precision: 0.8963190492975477\n",
+      "Recall: 0.8903116090631721\n",
+      "F1-score: 0.8933052293485897\n"
      ]
     }
    ],
@@ -1083,16 +1081,16 @@
      "text": [
       "\n",
       "================== Training Set Metrics: (Multinomial Naive Bayes) ====================\n",
-      "Accuracy: 0.88323125\n",
-      "Precision: 0.9019769789454364\n",
-      "Recall: 0.8599372554901447\n",
-      "F1-score: 0.8804555779505391\n",
+      "Accuracy: 0.88069375\n",
+      "Precision: 0.8966428794666111\n",
+      "Recall: 0.8606121964328122\n",
+      "F1-score: 0.8782581521565825\n",
       "\n",
       "================== Testing Set Metrics: (Multinomial Naive Bayes) ====================\n",
-      "Accuracy: 0.860325\n",
-      "Precision: 0.8706390861376968\n",
-      "Recall: 0.846296203671285\n",
-      "F1-score: 0.8582950769777057\n"
+      "Accuracy: 0.8599\n",
+      "Precision: 0.8726754726754726\n",
+      "Recall: 0.8426449257240034\n",
+      "F1-score: 0.8573973230189832\n"
      ]
     }
    ],
